<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <name>h265_image_transport</name>
    <version>0.1.0</version>
    <description>Messages for h265_image_transport</description>

    <maintainer email="clyde@mcqueen.net">Clyde McQueen</maintainer>
    <license>BSD</license>

    <author>Clyde McQueen</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rosidl_default_generators</build_depend>

    <exec_depend>rosidl_default_runtime</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <build_depend>ffmpeg</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>libavdevice-dev</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>rclcpp</build_depend>
    <build_depend>std_msgs</build_depend>

    <exec_depend>ffmpeg</exec_depend>
    <exec_depend>image_transport</exec_depend>
    <exec_depend>libavdevice-dev</exec_depend>
    <exec_depend>pluginlib</exec_depend>
    <exec_depend>rclcpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>


    <test_depend>ament_lint_auto</test_depend>

    <!-- This recursively depends on a set of common linters -->
    <test_depend>ament_lint_common</test_depend>
    
    <export>
        <build_type>ament_cmake</build_type>
        <image_transport plugin="${prefix}/h265_plugins.xml" />
    </export>
</package>
